--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="png" href="./src/assets/logo/kaylaLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Kayla Miller | Portfolio</title>
   </head>
